--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React component wrapper for Mathquill",
   "main": "index.js",
   "typings": "index.d.ts",
-  "repository": "git@github.com:viktorstrate/react-mathquill.git",
+  "repository": "git@github.com:zerodays/react-mathquill.git",
   "author": "viktorstrate <viktorstrate@gmail.com>",
   "license": "MIT",
   "private": false,
@@ -26,7 +26,7 @@
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
-    "@edtr-io/mathquill": "^0.11.0",
+    "@digabi/mathquill": "^0.10.12",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.4.0",
